--- a/week5/ex8-10.html
+++ b/week5/ex8-10.html
@@ -1,28 +1,38 @@
 <!DOCTYPE html>
-<html html>
-<head> <meta charset="utf-8"> 
-    <title> HTML 문서 작성기 만들기</title>
-    <script>
+<html lang="ko">
+<head>
+  <meta charset="utf-8" />
+  <title>HTML 문서 작성기 만들기</title>
+  <script>
     let win = null;
     function showHTML() {
-        if(win == null ||win.closed)
-            win = window.open("", "outWin", "width=300,height=200");
-    
-    let textArea = document.getElementByld("srcText");
-    win.document.open();
-    win.document.write(textArea.value); 
-    win.document.close();
-}
-</script> 
-</head> 
+      // 팝업 창 열기 (사용자 클릭 이벤트 안에서 실행되므로 차단 안 됨)
+      if (win == null || win.closed) {
+        win = window.open("", "outWin", "width=500,height=400");
+      }
+
+      const textArea = document.getElementById("srcText"); 
+      if (!textArea) return;
+
+      // 새 창에 작성
+      win.document.open();
+      win.document.write(textArea.value);
+      win.document.close();
+    }
+  </script>
+</head>
 <body>
-<h3> HTML 문서 작성기 만들기 </h3>
-<hr>
-<p> 아래에 HTML 문서를 작성하고 버튼을 클릭해 보세요.
-새 윈도우에 HTML 문서가 출력됩니다.</p>
-<textarea id="srcText" rows="10" cols="50"> </textarea>
-<br>
-<br>
-<button onclick="showHTML()"> HTML 문서 출력하기</button>
-</body>
-</html>
+  <h3>HTML 문서 작성기 만들기</h3>
+  <hr>
+  <p>아래에 HTML 문서를 작성하고 버튼을 클릭해 보세요. 새 윈도우에 HTML 문서가 출력됩니다.</p>
+  <textarea id="srcText" rows="12" cols="60"></textarea>
+  <br>
+  <br>
+  <button onclick="showHTML()">HTML 문서 출력하기</button>
+  </body>
+  </html>
+<!--<html lang="ko">
+<head><meta charset="utf-8"><title>예시</title></head>
+<body><h2>성공!</h2><p>이렇게 출력됩니다.</p></body>
+</html>-->
+
