--- a/MID/3.html
+++ b/MID/3.html
@@ -5,36 +5,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3</title>
     <script>
-        // 답을 추가하는 함수
+        // ✅ '답보기' 버튼 클릭 시 실행되는 함수
         function addAnswer(obj, text) {
-            let p = document.createElement("p");
-            p.innerHTML = text;
-            p.className = "answer"; // 답을 나중에 삭제할 수 있도록 클래스 지정
-            let div = obj.parentNode;
-            div.appendChild(p);
+            let p = document.createElement("p"); // <p> 태그(단락) 새로 만들기
+            p.innerHTML = text; // <p> 안에 전달된 텍스트(정답) 넣기
+            p.className = "answer"; // 나중에 찾기 쉽도록 클래스 이름 지정
 
-            obj.disabled = true;  // '답보기' 버튼 비활성화
+            let div = obj.parentNode; // 버튼이 속한 <div> 요소 찾기 (해당 문제 영역)
+            div.appendChild(p); // 새로 만든 <p>를 div 안에 추가
+
+            obj.disabled = true; // '답보기' 버튼을 비활성화하여 중복 추가 방지
         }
 
-        // 답을 삭제하는 함수
+        // ✅ '답삭제' 버튼 클릭 시 실행되는 함수
         function removeAnswer(obj) {
-            let div = obj.parentNode;
-            let answer = div.querySelector(".answer");
+            let div = obj.parentNode; // 버튼이 속한 <div> 찾기
+            let answer = div.querySelector(".answer"); // div 안에서 class='answer'인 요소 찾기
             if (answer) {
-                answer.remove();  // 답을 삭제
+                answer.remove(); // 해당 <p> 요소(답변) 삭제
             }
-            div.querySelector("input[value='답보기']").disabled = false; // '답보기' 버튼 활성화
+            // 답을 삭제한 후, '답보기' 버튼을 다시 활성화
+            div.querySelector("input[value='답보기']").disabled = false;
         }
     </script>
 </head>
+
 <body>
+    <!-- 첫 번째 문제 -->
     <div>
-        Q.웹프로그래밍의 3가지 요소는?<br>
+        Q. 웹프로그래밍의 3가지 요소는?<br>
         <input type="button" value="답보기" onclick="addAnswer(this, 'HTML, CSS, JavaScript')">
         <input type="button" value="답삭제" onclick="removeAnswer(this)"><br>
     </div>
+
+    <!-- 두 번째 문제 -->
     <div>
-        <br>Q.클라우드 컴퓨팅이란?<br>
+        <br>Q. 클라우드 컴퓨팅이란?<br>
         <input type="button" value="답보기" onclick="addAnswer(this, '컴퓨팅 자원을 인터넷을 이용하여 사용하는 것')">
         <input type="button" value="답삭제" onclick="removeAnswer(this)"><br>
     </div>
