--- a/MID/x.html
+++ b/MID/x.html
@@ -2,24 +2,35 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>정답</title>
+    <title>오답</title>
     <script>
+        // ❌ X 표시를 그리는 함수
         function drawX(ctx, x, y, size) {
-            ctx.beginPath();
-            ctx.moveTo(x - size, y - size); // 왼쪽 위에서 시작
-            ctx.lineTo(x + size, y + size); // 오른쪽 아래로
-            ctx.moveTo(x + size, y - size); // 오른쪽 위로
-            ctx.lineTo(x - size, y + size); // 왼쪽 아래로
-            ctx.stroke(); // 선 그리기
+            ctx.beginPath(); 
+            ctx.moveTo(x - size, y - size); // 왼쪽 위 → 시작점
+            ctx.lineTo(x + size, y + size); // 오른쪽 아래로 선 긋기
+
+            ctx.moveTo(x + size, y - size); // 오른쪽 위 → 다시 시작점 이동
+            ctx.lineTo(x - size, y + size); // 왼쪽 아래로 선 긋기
+
+            ctx.stroke(); // 선 그리기 실행
         }
     </script>
 </head>
+
 <body>
+    <!-- ✅ X 표시를 그릴 캔버스 -->
     <canvas id="myCanvas" width="100" height="100" style="background-color:aliceblue"></canvas>
+
     <script>
+        // ✅ 1. 캔버스 가져오기
         let canvas = document.getElementById("myCanvas");
+
+        // ✅ 2. 2D 그래픽 도구 불러오기
         let context = canvas.getContext("2d");
-        drawX(context, 50, 50, 40); // X 그리기
+
+        // ✅ 3. 중심(50, 50)에서 크기 40짜리 X 표시 그리기
+        drawX(context, 50, 50, 40);
     </script>
 </body>
 </html>
