웹프 중간(수정)

--- a/백준호/1.html
+++ b/백준호/1.html
@@ -1,47 +1,48 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-<meta charset="UTF-8">
-<title>계좌 관리</title>
-<style>
- body { font-family:system-ui; margin:40px; }
- button { margin-right:8px; }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>1</title>
+    <script>
+        let BankAccount = {
+            accountNumber : "123-456-789",
+            ownername : "백준호",
+            balance : 10000,
+            inquire : function(){
+                return "계좌번호: " + this.accountNumber + 
+                       "<br>예금주: " + this.ownername + 
+                       "<br>잔액: " + this.balance + "원";
+            },
+            deposit:function(amount){
+                this.balance += amount;
+            },
+            withdraw:function(amount){
+                this.balance -= amount;
+            }
+        };
+        function showAccont(){
+            let p = document.getElementById("check");
+            p.innerHTML = BankAccount.inquire();
+        }
+        function Deposit(){
+            let m = prompt("입금할 금액을 입력하세요.");
+            BankAccount.deposit(Number(m));
+            showAccont();
+        }
+        function Withdraw(){
+            let m = prompt("출금할 금액을 입력하세요.");
+            BankAccount.withdraw(Number(m));
+            showAccont();
+        }
+    </script>
 </head>
 <body>
-
-<h3>계좌 관리 프로그램</h3>
-<p>
-  <button onclick="showAccount()">계좌 확인</button>
-  <button onclick="Deposite()">입금</button>
-  <button onclick="Withdraw()">출금</button>
-</p>
-<div id="out">초기 화면: 버튼을 눌러주세요.</div>
-
-<script>
-const BackAccount = {
-  owner:"백준호", number:"123-456-789", balance:10000,
-  inquire(){ return "예금주: "+this.owner+"\n계좌번호: "+this.number+"\n현재 잔액: "+this.balance.toLocaleString()+"원"; },
-  deposite(amount){ this.balance+=amount; return "입금: "+amount.toLocaleString()+"원\n"+this.inquire(); },
-  widhdraw(amount){
-    if(amount>this.balance) return "출금 실패: 잔액 부족\n"+this.inquire();
-    this.balance-=amount; return "출금: "+amount.toLocaleString()+"원\n"+this.inquire();
-  }
-};
-
-const out=document.getElementById("out");
-function render(t){ out.innerHTML=String(t).replace(/(\r\n|\r|\n)/g,"<br>"); }
-
-function showAccount(){ render(BackAccount.inquire()); }
-function readAmount(msg){
-  const i=prompt(msg);
-  if(i===null)return null;
-  const v=Number(i);
-  if(!Number.isFinite(v)||v<=0){alert("올바른 금액을 입력하세요.");return null;}
-  return v;
-}
-function Deposite(){const m=readAmount("입금할 금액을 입력하세요:");if(m!==null)render(BackAccount.deposite(m));}
-function Withdraw(){const m=readAmount("출금할 금액을 입력하세요:");if(m!==null)render(BackAccount.widhdraw(m));}
-</script>
+    <div>
+        <input type="button" value="계좌 확인" onclick="showAccont()">
+        <input type="button" value="입금" onclick="Deposit()">
+        <input type="button" value="출금" onclick="Withdraw()">
+    </div>
+    <p id="check"></p>
 </body>
 </html>
