--- a/week11/tt.html
+++ b/week11/tt.html
@@ -9,39 +9,40 @@
     <script>
         var v0 = 'v0';
         let l0 = 'l0';
-        console.log(v0, l0);
+        console.log(v0, l0); // v0 l0
         function fn1(){
             v0 = 'fn1 - v0';
             l0 = 'fn1 - l0';
-            console.log(v0, l0);
+            console.log(v0, l0); // fn1 - v0 fn1 - l0 - 전역변수 값 덮어씀
         }
         fn1();
-        console.log(v0, l0);
+        console.log(v0, l0); // fn1 - v0 fn1 - l0
         function fn2(){
             var v0 = 'fn2 - v0';
             let l0 = 'fn2 - l0';
-            console.log(v0, l0);
+            console.log(v0, l0); // fn2 - v0 fn2 - l0
         }
         fn2();
-        console.log(v0, l0);
+        console.log(v0, l0); // fn1 - v0 fn1 - l0
         {
-            var v0 = 'block - v0';
-            let l0 = 'block - l0';
-            console.log(v0, l0);    
+            var v0 = 'block - v0'; // 함수레벨 스코프라서 전역변수 덮어씀
+            let l0 = 'block - l0'; // 블록레벨 스코프라서 새로운 지역변수 생성
+            console.log(v0, l0);     // block - v0 block - l0
         }
-        console.log(v0, l0);
+        console.log(v0, l0);   // block - v0 fn1 - l0
+                               // var는 함수레벨 스코프라서 전역변수 덮어씀, let은 블록레벨 스코프라서 영향 없음
 
         var i ='l';
         for(var i=0; i<1; i++){
-            console.log(i);
+            console.log(i); // 0
         }
-        console.log(i);
+        console.log(i); // 1
 
         let j= 'j';
         for(let j=0; j<1; j++){
-            console.log(j);
+            console.log(j); // 0
         }
-        console.log(j);
+        console.log(j); // j
     </script>
 </body>
 </html>
