--- a/week9/12-1.html
+++ b/week9/12-1.html
@@ -6,7 +6,7 @@
     <title>방문 카운트 쿠키</title>
     <script>
         function GetCookie(name) {
-            let pairs = document.cookie.split(";"); // 쿠키들을 ;로 구분하여 배열로 만듦
+            let pairs = document.cookie.split(";"); // 쿠키들을 ;로 구분하여 배열로 만듦 -> 쿠키 읽기
             for (let i = 0; i < pairs.length; i++) {
                 let pair = pairs[i].trim(); // 쿠키 앞뒤 공백 제거
                 let unit = pair.split("=");
@@ -16,7 +16,7 @@
         }
         return null;
     }
-    // 쿠키 설정 함수
+    // 쿠키 설정 함수, 쿠키 쓰기 
     function SetCookie(name, value, expireDate) {
         let cookieStr = name + "=" + escape(value) + ((expireDate ==null)? "": (";expires=" + expireDate.toUTCString()));
         document.cookie = cookieStr;
