--- a/week9/sessionStorage.html
+++ b/week9/sessionStorage.html
@@ -2,41 +2,86 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <!-- 반응형 웹을 위한 메타 태그 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>세션 스토리지에 쓰기 / 읽기</title>
+
+    <script>
+        // =====================================================
+        // SessionStorage에 데이터 저장하는 함수
+        // =====================================================
+        function store() {
+
+            // 브라우저가 sessionStorage를 지원하는지 확인
+            if (!window.sessionStorage) {
+                alert("이 브라우저는 세션 스토리지를 지원하지 않습니다.");
+                return;
+            }
+
+            // sessionStorage에 (품목명: 개수) 형태로 저장
+            // item.value = 입력된 품목명
+            // count.value = 입력된 개수
+            sessionStorage.setItem(item.value, count.value);
+
+            // 저장되었음을 콘솔에 출력 (디버그용)
+            console.log("저장 완료:", item.value, count.value);
+        }
+
+        // =====================================================
+        // SessionStorage에서 데이터 불러오는 함수
+        // =====================================================
+        function retrieve() {
+
+            // browser 지원 여부 확인
+            if (!window.sessionStorage) {
+                alert("이 브라우저는 세션 스토리지를 지원하지 않습니다.");
+                return;
+            }
+
+            // sessionStorage에서 키(품목명)에 해당하는 값 읽기
+            let val = sessionStorage.getItem(item.value);
+
+            // 해당 품목이 없으면 null 반환됨
+            if (val == null) {
+                alert(item.value + " 해당 품목이 없습니다.");
+            }
+            else {
+                // 있으면 입력칸에 개수 출력
+                count.value = val;
+            }
+        }
+    </script>
 </head>
+
 <body>
     <h3>세션 스토리지에 구입 리스트 저장 / 검색</h3>
     <hr>
-    품목명 : <input type="text" id="item" />
-    개수 : <input type="number" id="count" />
-    <button type = "button" id = "save" onclick="store()">저장</button>
-    <button type = "button" id = "read" onclick="read()">읽기</button>
+
+    <!-- 품목명 입력 -->
+    품목명 :
+    <input type="text" id="item" />
+
+    <!-- 개수 입력 -->
+    개수 :
+    <input type="number" id="count" />
+
+    <!-- 저장 버튼: 클릭하면 store() 실행 -->
+    <button onclick="store()">저장</button>
+
+    <!-- 검색 버튼: 클릭하면 retrieve() 실행 -->
+    <button onclick="retrieve()">검색</button>
+
     <script>
+        // =====================================================
+        // HTML 요소를 JS 변수로 연결
+        // 반드시 HTML 요소 생성 이후에 실행해야 정상 동작
+        // =====================================================
+
+        // 품목명 입력칸 DOM 객체
         let item = document.getElementById("item");
+
+        // 개수 입력칸 DOM 객체
         let count = document.getElementById("count");
-        // 이 전역변수 js 코드가 위에 있는 html 요소들(품목명, 개수) 보다 나중에 나와야 참조가 가능함
-        // DOM이 먼저 만들어지고 JS 코드가 실행
-        function store(){
-            if(!window.sessionStorage){
-                alert("이 브라우저는 세션 스토리지를 지원하지 않습니다.");
-                return;
-            }
-            sessionStorage.setItem(item.value, count.value);
-        }
-        function read(){
-            if(!window.sessionStorage){
-                alert("이 브라우저는 세션 스토리지를 지원하지 않습니다.");
-                return;
-            }
-            let val = sessionStorage.getItem(item.value);
-            if(val == null){
-                alert(item.value + "해당 품목이 없습니다.");
-            }
-            else{
-                count.value = val;
-                }
-        }
     </script>
 </body>
 </html>
