--- a/week10/13-1.html
+++ b/week10/13-1.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>오디오와 비디오 내장하기</title>
+    <script>
+        function musicplay(){
+            let audio = document.getElementById('audio');
+            audio.play();
+        }
+        function movieplay(){
+            let video = document.getElementById('video');
+            video.play();
+        }
+    </script>
 </head>
 <body>
     <h3>오디오와 비디오 내장하기</h3>
@@ -11,12 +21,26 @@
    <audio id="audio" src="media/EmbraceableYou.mp3" loop controls>
     웹 브라우가 오디오 요소를 지원하지 않습니다.
    </audio>
-   // 웹 브라우저가 오디오 태그를 지원하지 안할 때 표시할 내용
+   <!-- 웹 브라우저가 오디오 태그를 지원하지 않을 때 표시할 내용 -->
    <hr>
-   <video id ="vidoe" width="300" height="200" controls>
+   <video id ="video" width="300" height="200" controls>
     <source src ="media/BigBuckBunny.mp4" type="video/mp4">
     웹 브라우저가 video 태그를 지원하지 않습니다. 
    </video>
-    
+    <br><br>
+    <button onclick="musicplay();">Music play</button>
+    <button onclick="movieplay();">Movie play</button>
+
+    <script>
+        let video = document.getElementById('video');
+        video.onloadedmetadata = function(e){
+            video.width = video.videoWidth;
+            video.height = video.videoHeight;
+        }
+    </script>
 </body>
 </html>
+
+// video 태그 내부에 source 태그를 사용하여 비디오 파일의 경로와 타입을 지정합니다.
+// loop 속성은 비디오가 끝나면 다시 처음부터 재생되도록 합니다.
+// controls 속성은 재생, 일시정지, 음량 조절 등의 기본 컨트롤을 표시합니다.
