--- a/week10/13-7.html
+++ b/week10/13-7.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
 <meta charset="utf-8">
-<title>watchPosition()으로 반복 위치 서비스</title>
+<title>watchPosition()으로 반복 위치 서비스 &clearWatch()로 반복 서비스 중단</title>
 </head>
 <body>
   <h3>watchPosition()으로 반복 위치 서비스</h3>
