--- a/FINAL/2.html
+++ b/FINAL/2.html
@@ -5,92 +5,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>박규나-2</title>
     <script>
-        function drawImage() {
-            // 'selection'라디오 버튼을 모두 가져와, 선택된 항목을 찾음
-            let found = null;
-            let items = document.getElementsByName('selection');
+        function getSelectedItem() {
+            const items = document.getElementsByName('selection');
             for (let i = 0; i < items.length; i++) {
-                if (items[i].checked == true) { 
-                    found = items[i];
-                    break; 
+                if (items[i].checked) {
+                    return items[i];
                 }
             }
-            // 선택된 항목이 있다면
-            if (found != null) {
-                // ID가 'added-item'인 요소찾아 삭제
-                let prev_item = document.getElementById('added-item');
-                if (prev_item != null) {
-                    prev_item.parentElement.removeChild(prev_item); 
-                }// 기존 요소 제거
+            return null;
+        }
 
-                // 새로운 이미지 요소 생성.
-                let img = document.createElement('img');
-                img.src = found.value;          //선택된 항목값을 src 속성에 설정
-
-                // 생성한 이미지 요소에 'added-item'ID 추가
-                img.setAttribute('id', 'added-item');
-
-                // body를 부모로 지정
-                let parent = document.getElementById('body');
-                parent.appendChild(img);        //미지 요소를 부모에 추가
+        function clearPrevious() {
+            const prev = document.getElementById('added-item');
+            if (prev) {
+                prev.parentElement.removeChild(prev);
             }
         }
-        function playAudio() {
-            let found = null;
-            let items = document.getElementsByName('selection');
-            for (let i = 0; i < items.length; i++) {
-                if (items[i].checked == true) {
-                    found = items[i];
-                    break;
-                }
+
+        function renderMedia(kind) {
+            const found = getSelectedItem();
+            if (!found) return;
+
+            clearPrevious();
+
+            let element;
+            if (kind === 'image') {
+                element = document.createElement('img');
+            } else if (kind === 'audio') {
+                element = document.createElement('audio');
+                element.setAttribute('controls', 'controls');
+                element.volume = 0.1;
+            } else if (kind === 'video') {
+                element = document.createElement('video');
+                element.setAttribute('controls', 'controls');
+                element.volume = 0.1;
             }
-            if (found != null) {
-                let prev_item = document.getElementById('added-item');
-                if (prev_item != null) {
-                    prev_item.parentElement.removeChild(prev_item);
-                }
-                let audio = document.createElement('audio');
-                audio.src = found.value; 
-                audio.setAttribute('id', 'added-item');
-                audio.setAttribute('controls', 'controls');
-                audio.volume = 0.1;
-                let parent = document.getElementById('body');
-                parent.appendChild(audio);
-            }
+
+            element.src = found.value;
+            element.setAttribute('id', 'added-item');
+            document.body.appendChild(element);
         }
-        function playMovie() {
-            let found = null;
-            let items = document.getElementsByName('selection');
-            for (let i = 0; i < items.length; i++) {
-                if (items[i].checked == true) {
-                    found = items[i];
-                    break;
-                }
-            }
-            if (found != null) {
-                let prev_item = document.getElementById('added-item');
-                if (prev_item != null) {
-                    prev_item.parentElement.removeChild(prev_item);
-                }
-                let video = document.createElement('video');
-                video.src = found.value; 
-                video.setAttribute('id', 'added-item');
-                video.setAttribute('controls', 'controls');
-                video.volume = 0.1;
-                let parent = document.getElementById('body');
-                parent.appendChild(video);
-            }
-        }
+
+        function drawImage() { renderMedia('image'); }
+        function playAudio() { renderMedia('audio'); }
+        function playMovie() { renderMedia('video'); }
     </script>
 </head>
 <body>
     <h4>선택한 이미지가 출력되거나 음악 또는 동영상이 재생됩니다</h4>
     <hr>
-    <input type="radio" name="selection" value="./media/apple.png" onchange="drawImage();">사과
-    <input type="radio" name="selection" value="./media/banana.png" onchange="drawImage();">바나나
-    <input type="radio" name="selection" value="./media/mango.png" onchange="drawImage();">망고
-    <input type="radio" name="selection" value="./media/Dream.mp3" onchange="playAudio();">Dream(음악)
-    <input type="radio" name="selection" value="./media/ChocolateLove.mp4" onchange="playMovie();">Chocolate Love(동영상)
+    <input type="radio" name="selection" value="media/apple.png" onchange="drawImage();">사과
+    <input type="radio" name="selection" value="media/banana.png" onchange="drawImage();">바나나
+    <input type="radio" name="selection" value="media/mango.png" onchange="drawImage();">망고
+    <input type="radio" name="selection" value="media/Dream.mp3" onchange="playAudio();">Dream(음악)
+    <input type="radio" name="selection" value="media/ChocolateLove.mp4" onchange="playMovie();">Chocolate Love(동영상)
     <br><br>
 </body>
 </html>
